--- a/sass/pages/_mainpage.scss
+++ b/sass/pages/_mainpage.scss
@@ -28,7 +28,7 @@
         &--group {
             display: grid;
             grid-template-columns: min-content max-content;
-            grid-column-gap: 1rem;
+            column-gap: 1rem;
             padding: 1rem;
             align-items: center;
             cursor: pointer;
@@ -75,7 +75,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
             // grid-column-gap: 1rem;
-            grid-gap: 2rem;
+            gap: 2rem;
 
             @include respond(phone) {
                 grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
