--- a/sass/pages/_reservation.scss
+++ b/sass/pages/_reservation.scss
@@ -9,7 +9,7 @@
     &__boxes {
         display: grid;
         grid-template-rows: repeat(4, min-content);
-        grid-row-gap: 2rem;
+        row-gap: 2rem;
     }
 
     &__box {
@@ -81,7 +81,7 @@
         &--form {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-            grid-gap: 4rem;
+            gap: 4rem;
 
             input {
                 border: none;
