--- a/sass/pages/_roomdetails.scss
+++ b/sass/pages/_roomdetails.scss
@@ -33,7 +33,7 @@
 
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-            grid-gap: 2rem;
+            gap: 2rem;
             justify-items: center;
         }
 
@@ -76,7 +76,7 @@
         &--boxes {
             display: grid;
             grid-template-columns: min-content 1fr;
-            grid-column-gap: 1rem;
+            column-gap: 1rem;
             align-items: center;
             background-color: $color-gray-light-2;
             padding: 2rem;
